[tool.poetry]
name = "Voicecord"
version = "1.0.0"
description = "A code that can make your discord account 24/7 on voice channels!"
authors = ["SealedSaucer"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
Flask = "^2.2.1"
Brotli = "^1.0.9"
PyNaCl = "^1.5.0"
discord = "^1.7.3"
numpy = "^1.22.2"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
